# fgo-game-bot

./: .cursorrules  .gitignore  README.md  README_SETUP.md  build.gradle  build.gradle.kts  gradle.properties  gradlew  settings.gradle  settings.gradle.kts
app/: build.gradle  build.gradle.kts  lint-baseline.xml  proguard-rules.pro
app/src/androidTest/java/com/fgobot/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/templates/: README.md
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/fgobot/core/: FGOAccessibilityService.kt
app/src/main/java/com/fgobot/core/automation/: AutomationController.kt  AutomationStrategy.kt  BattleLogic.kt
app/src/main/java/com/fgobot/core/decision/: DecisionEngine.kt
app/src/main/java/com/fgobot/core/error/: FGOBotError.kt  FGOBotException.kt
app/src/main/java/com/fgobot/core/input/: InputController.kt
app/src/main/java/com/fgobot/core/logging/: FGOBotLogger.kt  FGOLogger.kt  LogTags.kt
app/src/main/java/com/fgobot/core/ml/: MLModelManager.kt
app/src/main/java/com/fgobot/core/vision/: ImageRecognition.kt  (+4 more)
app/src/main/java/com/fgobot/presentation/: MainActivity.kt
app/src/main/res/drawable/: floating_button_background.xml  ic_play_arrow.xml  ic_stop.xml
app/src/main/res/layout/: floating_overlay.xml
app/src/main/res/mipmap-hdpi/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/mipmap-mdpi/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/mipmap-xhdpi/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/mipmap-xxhdpi/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/mipmap-xxxhdpi/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: accessibility_service_config.xml  backup_rules.xml  data_extraction_rules.xml
app/src/test/java/com/fgobot/: ExampleUnitTest.kt
docs/: action_plan.md  android_studio_setup.md  core_logic_architecture.md  core_logic_features_breakdown.md  phase1_summary.md  phase3_implementation_summary.md  phase4_breakdown.md  phase4_implementation_summary.md  phase5_breakdown.md  quick_start_commands.md  requirements.md  week1_guide.md  week2_breakdown.md  week3_breakdown.md  week3_progress_report.md  week4_breakdown.md  week4_progress_report.md
(+61 files in other folders)
